prepare for configuring trans-ip server